--- a/KalmanFilter/KalmanFilter.csproj
+++ b/KalmanFilter/KalmanFilter.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\CSV.cs" />
+    <Compile Include="src\FixedLagSmoother.cs" />
     <Compile Include="src\KalmanFilter.cs" />
     <Compile Include="src\Matrix.cs" />
     <Compile Include="src\Vector3d.cs" />
